# Eribot

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICK_START.md  README.md  monitor-slackbot.sln  pytest.ini  requirements.txt  setup.cfg
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
config/: config.yaml
csharp_remediator/: Program.cs  RemediationService.cs  Remediator.csproj  appsettings.json
csharp_remediator/Controllers/: HealthController.cs  RemediationController.cs
csharp_remediator/Models/: RemediationRequest.cs  RemediationResult.cs  SystemInfo.cs
csharp_remediator/Properties/: launchSettings.json
csharp_remediator/Services/: HealthService.cs  IHealthService.cs  IPlatformService.cs  IRemediationService.cs  PlatformService.cs
docker/: Dockerfile.csharp  Dockerfile.python  docker-compose.yml
python_monitor/: __init__.py  config.yaml  config_loader.py  health_checker.py  main.py  monitor.py  monitory.py  pyproject.toml  remediation_client.py  requirements.txt  setup.py  slack_client.py
python_monitor/clients/: __init__.py  remediation.py  slack.py
python_monitor/config/: __init__.py  loader.py  models.py
python_monitor/core/: __init__.py  health.py  monitor.py
python_monitor/tests/: conftest.py  pytest.ini  test_config_models.py  test_dummy.py  test_exceptions.py  test_health_checker.py  test_health_fallback.py  test_heatlth_checker.py  test_integration.py  test_logger_coverage.py  test_main.py  test_monitor.py  test_remediation_client.py  test_slack_client.py  test_slack_client_coverage.py  test_validators.py
python_monitor/utils/: exceptions.py  logger.py  validators.py
scripts/: install.ps1  install.sh
