[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
pythonpath = "python_monitor"
testpaths = ["python_monitor/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=python_monitor",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Tests that take a long time to run",
    "network: mark test as requiring network access"
]

[project]
name = "eribot-monitor"
version = "2.0.0"
description = "EriBot system monitor service"
authors = [
  { name = "Eric S"}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "slack-sdk==3.20.0",
  "requests==2.32.4",
  "psutil==5.9.8",
  "python-dotenv==1.0.0",
  "pyyaml==6.0.1",
  "schedule==1.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-asyncio==0.21.2",
  "flake8==7.0.0",
  "black==24.3.0",
  "mypy==1.8.0",
  "types-requests==2.32.0",
  "types-PyYAML==6.0.12",
  "pre-commit==3.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python_monitor*"]